test/type/wrong/hm4.kk.out
test/type/wrong/hm4.kk(4, 5): error: types do not match
 context : {}
 term : {}
 inferred type: ()
 expected type: int
 because : function returns values of different types