test/type/wrong/hm4.kk
fun f( g : int -> int ) { }

fun main() {
	f({})
}
